[project]
name = "health-check-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pg>=0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pylint>=3.3.8",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
